[package]
name = "carry"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Carry"
license.workspace = true

[[bin]]
name = "carry"
path = "src/bin/carry.rs"

[dependencies]

[dev-dependencies]
anyhow = { workspace = true }
carry-telemetry-service = { workspace = true, features = ["helpers"] }
dialog-common = { workspace = true, features = ["helpers"] }
dialog-remote-s3 = { workspace = true, features = ["helpers"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonk-access-service = { workspace = true, features = ["helpers"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# CLI
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }

# Dialog DB
dialog-artifacts = { workspace = true }
dialog-capability = { workspace = true }
dialog-credentials = { workspace = true }
dialog-effects = { workspace = true }
dialog-operator = { workspace = true }
dialog-query = { workspace = true }
dialog-remote-s3 = { workspace = true }
dialog-remote-ucan-s3 = { workspace = true }
dialog-repository = { workspace = true, features = ["helpers"] }
dialog-storage = { workspace = true }
dialog-ucan = { workspace = true }
dialog-ucan-core = { workspace = true }
dialog-varsig = { workspace = true }

# Tonk
tonk-invite = { workspace = true }

url = { workspace = true }

# Async
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }

blake3 = { workspace = true }
bs58 = { workspace = true }
# Crypto
ed25519-dalek = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Serialization
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utilities
anyhow = { workspace = true }
dirs = { workspace = true }

[features]
default = []
integration-tests = ["dialog-common/integration-tests"]
web-integration-tests = ["dialog-common/web-integration-tests"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(dialog_test_native_integration)',
    'cfg(dialog_test_wasm_integration)',
    'cfg(feature, values("web-integration-tests"))',
] }
